--- a/NewsApplication/StoryBoards/SideMenu.storyboard
+++ b/NewsApplication/StoryBoards/SideMenu.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,7 +17,8 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zKB-CU-VyQ">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.91764706370000004" green="0.94901967050000002" blue="0.98823529480000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="sectionIndexBackgroundColor" red="0.94509804249999996" green="0.92549020049999997" blue="0.89803922179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="MenuTableViewCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MenuTableViewCell" id="wbl-P3-B4t" customClass="MenuTableViewCell" customModule="NewsApplication" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="52.333332061767578"/>
@@ -28,12 +28,12 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ODD-k9-s6W">
-                                                    <rect key="frame" x="20" y="10.999999999999998" width="42" height="30.333333333333329"/>
+                                                    <rect key="frame" x="20" y="10.999999999999998" width="56" height="30.333333333333329"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="QI7-Pf-4Xr"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -43,6 +43,7 @@
                                                 <constraint firstItem="ODD-k9-s6W" firstAttribute="leading" secondItem="YTa-eh-fJK" secondAttribute="leadingMargin" id="mKj-RY-WgU"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.91764706370000004" green="0.94901967050000002" blue="0.98823529480000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <connections>
                                             <outlet property="nameLabel" destination="ODD-k9-s6W" id="TNX-j4-ujb"/>
                                         </connections>
@@ -51,7 +52,7 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" red="0.94509804249999996" green="0.92549020049999997" blue="0.89803922179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.91853201387729655" green="0.94785550656425277" blue="0.98705406101851845" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="zKB-CU-VyQ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Aww-qz-oOa"/>
                             <constraint firstItem="zKB-CU-VyQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="IGw-Ci-LVy"/>
@@ -68,9 +69,4 @@
             <point key="canvasLocation" x="-24" y="4"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
