--- a/NewsApplication/StoryBoards/Onboarding.storyboard
+++ b/NewsApplication/StoryBoards/Onboarding.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,44 +17,59 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qBN-9s-CYi">
-                                <rect key="frame" x="100.00000000000001" y="404" width="193.33333333333337" height="44"/>
-                                <color key="backgroundColor" red="0.89859250992063489" green="0.69069630071316912" blue="0.39614636142435944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="tintColor" red="0.21046214620000001" green="0.21046214620000001" blue="0.21046214620000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <rect key="frame" x="95" y="616" width="203" height="50"/>
+                                <color key="backgroundColor" red="0.73333334920000004" green="0.1843137443" blue="0.1647058874" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Jump To News">
-                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="25"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Explore">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="30"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="skipButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="UbL-dY-Z7D"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="3772237" translatesAutoresizingMaskIntoConstraints="NO" id="cCA-g9-giK" customClass="AnimatedImageView" customModule="Kingfisher">
-                                <rect key="frame" x="58" y="69" width="238" height="190"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="202102_005" translatesAutoresizingMaskIntoConstraints="NO" id="MVe-ii-rUZ">
-                                <rect key="frame" x="42" y="224" width="308" height="185"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding" translatesAutoresizingMaskIntoConstraints="NO" id="MVe-ii-rUZ">
+                                <rect key="frame" x="16" y="209" width="359" height="280"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="280" id="nfw-lH-76N"/>
+                                </constraints>
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="reputation_set_2" translatesAutoresizingMaskIntoConstraints="NO" id="qrg-Ld-MEs">
-                                <rect key="frame" x="23" y="641" width="338" height="154"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Hands holding mobile phones with news on screen" translatesAutoresizingMaskIntoConstraints="NO" id="E8h-cb-BSw">
-                                <rect key="frame" x="33" y="456" width="317" height="172"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yzZ-jV-Le0">
+                                <rect key="frame" x="75" y="134" width="243" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="K4g-FJ-v7b"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="59"/>
+                                <color key="textColor" red="0.1725490093" green="0.2470588088" blue="0.34117650989999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You can access news in various categories from all over the world here. Let's explore!" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3K-nM-UEo">
+                                <rect key="frame" x="25" y="511" width="343" height="45"/>
+                                <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="18"/>
+                                <color key="textColor" red="0.1725490093" green="0.2470588088" blue="0.34117650989999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.99215686319999996" green="0.94901967050000002" blue="0.75294119120000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="qBN-9s-CYi" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="7ok-jg-k8k"/>
-                            <constraint firstItem="qBN-9s-CYi" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="IR2-fs-lVD"/>
+                            <constraint firstItem="MVe-ii-rUZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="9vL-s5-XvD"/>
+                            <constraint firstItem="MVe-ii-rUZ" firstAttribute="top" secondItem="yzZ-jV-Le0" secondAttribute="bottom" constant="5" id="ESx-ll-Nr5"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="yzZ-jV-Le0" secondAttribute="trailing" constant="75" id="HCS-uM-Wwp"/>
+                            <constraint firstItem="n3K-nM-UEo" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="25" id="RTq-sF-Ayb"/>
+                            <constraint firstItem="yzZ-jV-Le0" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="75" id="V6e-3d-A5n"/>
+                            <constraint firstItem="qBN-9s-CYi" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="95" id="VaT-Q1-9FA"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="MVe-ii-rUZ" secondAttribute="trailing" constant="18" id="WdO-RQ-flv"/>
+                            <constraint firstItem="n3K-nM-UEo" firstAttribute="top" secondItem="MVe-ii-rUZ" secondAttribute="bottom" constant="22" id="gmu-Yi-4I9"/>
+                            <constraint firstItem="qBN-9s-CYi" firstAttribute="top" secondItem="n3K-nM-UEo" secondAttribute="bottom" constant="60" id="lgL-6W-Bpe"/>
+                            <constraint firstItem="yzZ-jV-Le0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="75" id="nNv-7F-0d6"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="n3K-nM-UEo" secondAttribute="trailing" constant="25" id="p4h-6M-xDZ"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="qBN-9s-CYi" secondAttribute="trailing" constant="95" id="yNi-q5-Se4"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="onboardingImage" destination="cCA-g9-giK" id="1gt-P6-Kk1"/>
+                        <outlet property="onboardingImage" destination="MVe-ii-rUZ" id="uu8-eH-sh2"/>
                         <outlet property="skipButtonOutlet" destination="qBN-9s-CYi" id="vJg-Os-DES"/>
                     </connections>
                 </viewController>
@@ -63,9 +79,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="202102_005" width="5209" height="5209"/>
-        <image name="3772237" width="2000" height="2000"/>
-        <image name="Hands holding mobile phones with news on screen" width="7500" height="5000"/>
-        <image name="reputation_set_2" width="7370" height="5000"/>
+        <image name="onboarding" width="5209" height="5209"/>
+        <systemColor name="secondarySystemGroupedBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
