--- a/NewsApplication/StoryBoards/Profile.storyboard
+++ b/NewsApplication/StoryBoards/Profile.storyboard
@@ -22,7 +22,7 @@
                                     <constraint firstAttribute="height" constant="300" id="g3i-Tk-IbA"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zehra" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Or-lX-Z4I">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Zehra" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Or-lX-Z4I">
                                 <rect key="frame" x="56" y="399" width="281" height="34"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -32,8 +32,8 @@
                                 <color key="textColor" red="0.61001296689999995" green="0.61647796629999996" blue="0.5780046875" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="e-mail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cS-gQ-5vC">
-                                <rect key="frame" x="56" y="547" width="281" height="34"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  e-mail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cS-gQ-5vC">
+                                <rect key="frame" x="56" y="527" width="281" height="34"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="oZK-pe-ljM"/>
@@ -42,8 +42,8 @@
                                 <color key="textColor" red="0.61001296689999995" green="0.61647796629999996" blue="0.5780046875" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="555-333-2222" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0o-uu-sDl">
-                                <rect key="frame" x="56" y="621" width="281" height="34"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  555-333-2222" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0o-uu-sDl">
+                                <rect key="frame" x="56" y="591" width="281" height="34"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="HCf-ZN-pxZ"/>
@@ -52,8 +52,8 @@
                                 <color key="textColor" red="0.61001296689999995" green="0.61647796629999996" blue="0.5780046875" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kahraman" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whj-9z-yui">
-                                <rect key="frame" x="56" y="473" width="281" height="34"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Kahraman" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whj-9z-yui">
+                                <rect key="frame" x="56" y="463" width="281" height="34"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="ydz-kF-ezw"/>
@@ -63,7 +63,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vgW-Vl-Ly2">
-                                <rect key="frame" x="143.66666666666666" y="695" width="106" height="40"/>
+                                <rect key="frame" x="143.66666666666666" y="665" width="106" height="40"/>
                                 <color key="backgroundColor" red="0.94901967050000002" green="0.63921570780000003" blue="0.35294118520000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="MFL-uT-GhO"/>
@@ -79,10 +79,10 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" red="1" green="0.94745775987006631" blue="0.57765874117699478" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.94509804249999996" green="0.92549020049999997" blue="0.89803922179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="Whj-9z-yui" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="56" id="0Yu-6G-ph4"/>
-                            <constraint firstItem="0cS-gQ-5vC" firstAttribute="top" secondItem="Whj-9z-yui" secondAttribute="bottom" constant="40" id="3Ac-be-gvh"/>
+                            <constraint firstItem="0cS-gQ-5vC" firstAttribute="top" secondItem="Whj-9z-yui" secondAttribute="bottom" constant="30" id="3Ac-be-gvh"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0cS-gQ-5vC" secondAttribute="trailing" constant="56" id="5cE-cc-7XD"/>
                             <constraint firstItem="hhg-T2-Ucs" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="CAB-5W-A1W"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Whj-9z-yui" secondAttribute="trailing" constant="56" id="KHo-j8-gK9"/>
@@ -90,18 +90,19 @@
                             <constraint firstItem="hhg-T2-Ucs" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="Kd9-it-BR4"/>
                             <constraint firstItem="vgW-Vl-Ly2" firstAttribute="top" secondItem="K0o-uu-sDl" secondAttribute="bottom" constant="40" id="arT-ub-ywW"/>
                             <constraint firstItem="vgW-Vl-Ly2" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="eaj-qz-Jrt"/>
-                            <constraint firstItem="K0o-uu-sDl" firstAttribute="top" secondItem="0cS-gQ-5vC" secondAttribute="bottom" constant="40" id="eoh-ML-tm3"/>
+                            <constraint firstItem="K0o-uu-sDl" firstAttribute="top" secondItem="0cS-gQ-5vC" secondAttribute="bottom" constant="30" id="eoh-ML-tm3"/>
                             <constraint firstItem="0cS-gQ-5vC" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="56" id="gyE-FC-hCK"/>
                             <constraint firstItem="2Or-lX-Z4I" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="56" id="hAV-3i-x2Y"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="2Or-lX-Z4I" secondAttribute="trailing" constant="56" id="iYX-jR-ph6"/>
                             <constraint firstItem="K0o-uu-sDl" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="56" id="nCg-Ls-uXw"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="hhg-T2-Ucs" secondAttribute="trailing" constant="30" id="nL6-df-ZAn"/>
-                            <constraint firstItem="Whj-9z-yui" firstAttribute="top" secondItem="2Or-lX-Z4I" secondAttribute="bottom" constant="40" id="ojS-4w-IIu"/>
+                            <constraint firstItem="Whj-9z-yui" firstAttribute="top" secondItem="2Or-lX-Z4I" secondAttribute="bottom" constant="30" id="ojS-4w-IIu"/>
                             <constraint firstItem="2Or-lX-Z4I" firstAttribute="top" secondItem="hhg-T2-Ucs" secondAttribute="bottom" constant="30" id="uhu-2v-icN"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="emailLabel" destination="0cS-gQ-5vC" id="xNJ-3v-kMb"/>
+                        <outlet property="logoutButton" destination="vgW-Vl-Ly2" id="N9m-Rd-ada"/>
                         <outlet property="nameLabel" destination="2Or-lX-Z4I" id="DkL-Dy-1fL"/>
                         <outlet property="phoneNumberLabel" destination="K0o-uu-sDl" id="j5Q-8e-8or"/>
                         <outlet property="profilePageImage" destination="hhg-T2-Ucs" id="ahU-g4-ENo"/>
