--- a/NewsApplication/StoryBoards/SavedNews.storyboard
+++ b/NewsApplication/StoryBoards/SavedNews.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,7 +17,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="vjH-ZM-UQ3">
-                                <rect key="frame" x="10" y="59" width="373" height="44"/>
+                                <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                                <color key="backgroundColor" red="0.94509804249999996" green="0.92549020049999997" blue="0.89803922179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="J2r-Aq-euc"/>
                                 </constraints>
@@ -26,7 +26,7 @@
                             </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="u8B-Ot-Bwp">
                                 <rect key="frame" x="0.0" y="103" width="393" height="749"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.94509804249999996" green="0.92549020049999997" blue="0.89803922179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Wng-5Y-ddC">
                                     <size key="itemSize" width="184" height="258"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -41,25 +41,29 @@
                                             <rect key="frame" x="0.0" y="0.0" width="184" height="258"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eri-FG-Sm2">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eri-FG-Sm2">
                                                     <rect key="frame" x="8" y="8" width="168" height="120"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="120" id="sj5-L9-Z1k"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nEq-cF-g9e">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nEq-cF-g9e">
                                                     <rect key="frame" x="8" y="144" width="168" height="20.333333333333343"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXn-RN-qcB">
-                                                    <rect key="frame" x="54.666666666666657" y="207" width="75" height="35"/>
+                                                <button clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXn-RN-qcB">
+                                                    <rect key="frame" x="45.666666666666664" y="212" width="92.666666666666686" height="30"/>
+                                                    <color key="backgroundColor" red="0.58646559723882352" green="0.73373062057501048" blue="0.93725490570000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="35" id="ZPR-dy-2lO"/>
+                                                        <constraint firstAttribute="height" constant="30" id="ZPR-dy-2lO"/>
                                                     </constraints>
+                                                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" title="Remove">
+                                                        <fontDescription key="titleFontDescription" type="boldSystem" pointSize="18"/>
+                                                    </buttonConfiguration>
                                                     <connections>
                                                         <action selector="deleteButtonClicked:" destination="EC1-A2-Q9L" eventType="touchUpInside" id="j0T-k4-yRH"/>
                                                     </connections>
@@ -77,10 +81,12 @@
                                                 <constraint firstItem="nEq-cF-g9e" firstAttribute="leading" secondItem="00e-wt-m8U" secondAttribute="leading" constant="8" id="tkg-VG-sUN"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <color key="backgroundColor" red="0.85111093521118164" green="0.71916094106007888" blue="0.67474624551948148" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.81176471709999998" green="0.87058818339999999" blue="0.93333333730000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <size key="customSize" width="184" height="258"/>
                                         <connections>
+                                            <outlet property="deleteButton" destination="fXn-RN-qcB" id="JGR-MS-RN8"/>
+                                            <outlet property="deleteButtonOutlet" destination="fXn-RN-qcB" id="ymN-uy-Jx7"/>
                                             <outlet property="imageView" destination="eri-FG-Sm2" id="aar-83-jXJ"/>
                                             <outlet property="titleView" destination="nEq-cF-g9e" id="E1p-w9-ivD"/>
                                         </connections>
@@ -92,8 +98,8 @@
                         <color key="backgroundColor" red="0.94509804249999996" green="0.92549020049999997" blue="0.89803922179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="u8B-Ot-Bwp" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="5um-wh-FZt"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="vjH-ZM-UQ3" secondAttribute="trailing" constant="10" id="8dH-Sl-OXY"/>
-                            <constraint firstItem="vjH-ZM-UQ3" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="9ZB-Ss-Y10"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="vjH-ZM-UQ3" secondAttribute="trailing" id="8dH-Sl-OXY"/>
+                            <constraint firstItem="vjH-ZM-UQ3" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="9ZB-Ss-Y10"/>
                             <constraint firstItem="vjH-ZM-UQ3" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="9kf-NM-YoK"/>
                             <constraint firstItem="u8B-Ot-Bwp" firstAttribute="top" secondItem="vjH-ZM-UQ3" secondAttribute="bottom" id="IiV-lv-sAK"/>
                             <constraint firstAttribute="bottom" secondItem="u8B-Ot-Bwp" secondAttribute="bottom" id="Ok0-1V-1qD"/>
@@ -110,9 +116,4 @@
             <point key="canvasLocation" x="139.69465648854961" y="-2.1126760563380285"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
